[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ComfyRage"
version = "1.0.0"
description = "Pre (pre-process comments/random/de-emphasis), Show (text), Debug (weights)"
readme = "README.md"
license = {file = "UNLICENSE"}
authors = [{name = "Rakka Rage", email = "rakkarage@gmail.com"}]
classifiers = [
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/rakkarage/ComfyRage"

[tool.setuptools]
packages = ["ComfyRage"]
include-package-data = true

[tool.setuptools.package-data]
"ComfyRage.web" = ["*.js", "*.css", "*.html"]
